--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "learn-vite",
   "private": true,
   "version": "0.0.0",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/material": "^6.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
